# chat-bot

./: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.dev.yml  docker-compose.yml  flake.nix  install.yml  systemd.conf
.github/workflows/: audit.yml  build.yml  docker.yml
src/: db.rs  discord_bot.rs  enhance.rs  main.rs  subscribe.proto  subscribe.rs  telegram_bot.rs  telegram_client.rs
